--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["es7"],
     "target": "es6",
     "alwaysStrict": true,
     "module": "commonjs",
@@ -10,7 +11,7 @@
     // "declarationMap": true,
     "sourceMap": true,
     "resolveJsonModule": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "baseUrl": ".",
